Update image file extensions from .jpg to .JPG

--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@
 
         <div class="gallery" aria-label="Fotogalerie">
           <div class="shot g-1">
-            <img src="assets/gallery-1.jpg" alt="Crowd Stimmung" loading="lazy" />
+            <img src="assets/gallery-1.JPG" alt="Crowd Stimmung" loading="lazy" />
           </div>
           <div class="shot g-2">
             <img src="assets/gallery-2.jpg" alt="Bandfoto" loading="lazy" />
           </div>
           <div class="shot g-3">
-            <img src="assets/gallery-3.jpg" alt="Bergkirchweih Atmosphäre" loading="lazy" />
+            <img src="assets/gallery-3.JPG" alt="Bergkirchweih Atmosphäre" loading="lazy" />
           </div>
         </div>
       </div>
