Change heading and update event description
Updated event information for Bergkirchweih.

--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
       </div>
 
       <div class="card col-5">
-        <h2>Info</h2>
+        <h2>Bergkirchweih</h2>
         <p>
-          Kontakt/Booking fügen wir später ein.<br/>
-          Wenn du willst, baue ich dann eine saubere Booking-Sektion + Presskit-Link ein (ohne “Baukasten”-Look).
+          Unser Main-Event des Jahres steht an! <br/>
+          Wir sind Karan & Friends und wir freuen uns riesig, euch auf der Bergkirchweih zu sehen! Für uns gibt’s nichts Besseres, als mit euch zusammen zu feiern: laut mitsingen, tanzen, lachen und einfach den Moment genießen. Wir bringen Songs mit, die euch von den ersten Takten an abholt! Klassiker, moderne Hits und genau die Energie, die so ein Abend braucht. Kommt früh, bleibt lange und macht die Stimmung mit uns komplett. Wir sehen uns vor der Bühne. Bergkirchweih, wir sind bereit!
         </p>
       </div>
 
