Fix hyphen in shows heading

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
     <section class="grid" id="shows">
       <div class="card col-7">
-        <h2>Shows – Bergkirchweih Erlangen</h2>
+        <h2>Shows - Bergkirchweih Erlangen</h2>
         <p>Alle Shows ab <strong>18:00</strong> am <strong>Niklas Keller</strong>.</p>
 
         <ul class="shows" aria-label="Showliste">
