Change logo image file extension to uppercase

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <img id="logo" src="assets/logo.png" alt="Karan & Friends Logo" />
+        <img id="logo" src="assets/logo.PNG" alt="Karan & Friends Logo" />
         <div>Karan & Friends</div>
       </div>
 
