Update chip labels in index.html

--- a/index.html
+++ b/index.html
@@ -298,9 +298,11 @@
         <p class="tagline">Deine Partyband für ein unvergessliches Event.</p>
 
         <div class="chips" aria-label="Highlights">
-          <span class="chip">Live • Energie</span>
-          <span class="chip">Dark • Warm • Neon</span>
-          <span class="chip">Bergkirchweih 2026</span>
+          <span class="chip">Live</span>
+          <span class="chip">Emotional</span>
+          <span class="chip">Hits</span>
+          <span class="chip">Party</span>
+          <span class="chip">Bergkirchweih</span>
         </div>
       </div>
     </section>
