--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
       <div class="card col-12" id="gallery">
         <h2>Fotos</h2>
-        <p>Nutze deine Uploads als Mood + Social Proof.</p>
+        <p>Hier ein paar Einblicke.</p>
 
         <div class="gallery" aria-label="Fotogalerie">
           <div class="shot g-1">
